fix: fix list overflow

--- a/rs-clone/src/components/Dashboard/components/ProjectsList/ProjectsList.module.scss
+++ b/rs-clone/src/components/Dashboard/components/ProjectsList/ProjectsList.module.scss
@@ -2,5 +2,6 @@
   display: flex;
   gap: 12px;
   padding: 14px 0;
-  overflow: scroll;
+  overflow-y: hidden;
+  overflow-x: auto;
 }
